# d4f

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DFF-EXT-001-TRACEABILITY.md  LICENCE  LLM_ENGINE_GUIDE.md  README.md  SECURITY.md  build-native.bat  create-game-repo.bat  dff.sln
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
engine/managed/: Engine.sln
engine/managed/src/Engine.App/: DeterministicModeOptions.cs  Engine.App.csproj  FrameObservabilitySnapshot.cs  GameHost.cs  GameHostOptions.cs  InteropBudgetOptions.cs
engine/managed/src/Engine.Audio/: AmbienceDirector.cs  AudioBus.cs  AudioTypes.cs  Engine.Audio.csproj  IAudioFacade.cs  NoopAudioFacade.cs  ProceduralSoundBlobBuilder.cs  ProceduralSoundRecipe.cs  ProceduralSoundSynthesizer.cs
engine/managed/src/Engine.Content/: AssetKey.cs  AssetRegistry.cs  AssetRegistryDiscovery.cs  Assets.cs  DevDiskAssetCache.cs  DffAssetAttribute.cs  Engine.Content.csproj  IAssetRecipe.cs  InMemoryAssetsProvider.cs  MaterialBlobCodec.cs  MeshBlobCodec.cs  MeshBlobModels.cs  MountedContentAssetsProvider.cs  PackagedRuntimeContentBootstrap.cs  RuntimeAssetCache.cs  SoundBlobCodec.cs  TextureBlobCodec.cs
engine/managed/src/Engine.ECS/: ComponentStorage.cs  IWorldSystem.cs  SystemStage.cs  World.Components.cs  World.cs
engine/managed/src/Engine.NativeBindings/: Engine.NativeBindings.csproj  NativeFacadeFactory.cs  NativeFacadeSet.cs  PackagedRuntimeNativeBootstrap.cs
engine/managed/src/Engine.Net/: ClientInterpolationBuffer.cs  DeterministicNetClock.cs  INetFacade.cs  InMemoryNetSession.Ownership.cs  InMemoryNetSession.TransportSimulation.cs  InMemoryNetSession.cs  NetDataContracts.cs  NetEvent.cs  NetInterpolationSample.cs  NetPeerStats.cs  NetRpcBinaryCodec.cs  NetSnapshotBinaryCodec.cs  NetworkChannel.cs  NetworkChannelMask.cs  NetworkConfig.cs  NetworkRole.cs  NoopNetFacade.cs  ReplicatedComponentAttribute.cs
engine/managed/src/Engine.Physics/: CharacterController.cs  CharacterControllerSystem.cs  ColliderShapeType.cs  Engine.Physics.csproj  IPhysicsFacade.cs  NoopPhysicsFacade.cs  PhysicsBody.cs  PhysicsBodyType.cs  PhysicsCollider.cs  PhysicsContactEvent.cs  PhysicsContactEventType.cs  PhysicsMaterial.cs  PhysicsOverlapHit.cs  PhysicsOverlapQuery.cs  PhysicsRaycastHit.cs  PhysicsRaycastQuery.cs  PhysicsShapeValidation.cs  PhysicsSweepHit.cs  PhysicsSweepQuery.cs  PhysicsTriggerEventTracker.cs
engine/managed/src/Engine.Procedural/: Engine.Procedural.csproj  GeometryTypes.cs  LevelChunkTag.cs  LevelGenerator.cs  MaterialTemplates.cs  MeshBuilder.cs  NetProceduralChunkReplicator.cs  ProceduralAnimation.cs  (+9 more)
engine/native/: CMakeLists.txt
engine/native/include/: engine_native.h
engine/native/src/bridge_capi/: audio_capi.cpp  bridge_state.h  capture_capi.cpp  content_capi.cpp  engine_capi.cpp  handle_capi_audio_net_physics.cpp  handle_capi_engine_content.cpp  handle_capi_render_capture.cpp  handle_registry.cpp  handle_registry.h  native_library_anchor.cpp  net_capi.cpp  physics_capi.cpp  renderer_capi.cpp
engine/native/src/content/: content_runtime.cpp  content_runtime.h  pak_index.cpp  pak_index.h
engine/native/src/core/: audio_state.cpp  capture_store.cpp  capture_store.h  engine_state.cpp  engine_state.h  net_state.cpp  net_state.h  physics_queries.cpp  physics_raycast.cpp  resource_table.h
engine/native/src/platform/: platform_state.cpp  platform_state.h
engine/native/src/render/: frame_graph_builder.cpp  frame_graph_builder.h  material_system.cpp  material_system.h  render_graph.cpp  render_graph.h
engine/native/src/rhi/: pipeline_state_cache.cpp  pipeline_state_cache.h  rhi_device.cpp  rhi_device.h
engine/native/tests/: native_tests.cpp
engine/native/tests/audio/: audio_capi_tests.cpp
engine/native/tests/capture/: capture_capi_tests.cpp
engine/native/tests/content/: content_runtime_tests.cpp  content_runtime_tests.h  content_string_view_capi_tests.cpp
engine/native/tests/core/: engine_pipeline_cache_persistence_tests.cpp  engine_pipeline_cache_persistence_tests.h
engine/native/tests/handle/: handle_capi_tests.cpp
engine/native/tests/net/: net_capi_tests.cpp
engine/native/tests/platform/: platform_state_tests.cpp  platform_state_tests.h
engine/native/tests/render/: frame_graph_builder_tests.cpp  frame_graph_builder_tests.h  material_system_tests.cpp  material_system_tests.h  render_graph_tests.cpp  render_graph_tests.h
engine/native/tests/rhi/: pipeline_state_cache_tests.cpp  pipeline_state_cache_tests.h  rhi_device_tests.cpp  rhi_device_tests.h
engine/tools/asset-pipeline/: AssetCompiler.cs  AssetManifest.cs  AssetPipelineService.cs  CompiledAssetFormat.cs  CompiledAssetWriter.cs  CompiledManifestCodec.cs  Engine.AssetPipeline.csproj  PakArchive.cs  PakBinaryCodec.cs  PakEntryKeyBuilder.cs
engine/tools/assetc/: Assetc.csproj  Program.cs
engine/tools/assetc.tests/: AssetManifestMetadataTests.cs  Assetc.Tests.csproj  AssetcAppValidationTests.cs  AssetcParserTests.cs  CompiledAssetFormatTests.cs
engine/tools/engine-cli/: Engine.Cli.csproj  Program.cs
engine/tools/engine-cli.tests/: Engine.Cli.Tests.csproj  EngineCliAliasCommandTests.cs  EngineCliApiDumpFailureTests.cs  EngineCliApiDumpParsingTests.cs  EngineCliAppValidationTests.cs  EngineCliDoctorToolChecksTests.cs  EngineCliPackPipelineTests.cs  EngineCliParserTests.cs  EngineCliPreviewArtifactsDeterminismTests.cs  EngineCliPreviewArtifactsTests.cs  EngineCliPreviewAudioArtifactsTests.cs  EngineCliPreviewDumpTests.cs  EngineCliPreviewMaterialLightingTests.cs  EngineCliPreviewQualityTests.cs  EngineCliPreviewRasterizerSamplingTests.cs  EngineCliPreviewRasterizerShadingTests.cs  EngineCliTemplateRuntimeTests.cs  EngineCliTestCaptureOptionsTests.cs  EngineCliTestGoldenComparisonTests.cs  EngineCliTestReplayOptionsTests.cs  EngineCliUpdateCommandTests.cs
samples/sample-3d/: README.md  project.json
samples/sample-ui/: README.md  project.json
templates/game-template/: README.md  project.json
templates/game-template/assets/: example.txt  manifest.json
(+262 files in other folders)
